--- a/src/app/module/module.component.html
+++ b/src/app/module/module.component.html
@@ -11,6 +11,11 @@
   </thead>
   <tbody>
     <tr *ngFor="let module of modules">
+      <td>
+        <button class="btn btn-warning">
+            Get Baselines
+        </button>
+      </td>
       <td>{{module.id}}</td>
       <td>{{module.name}}</td>
       <td>{{module.module_id}}</td>
