--- a/src/app/module/module.component.html
+++ b/src/app/module/module.component.html
@@ -18,11 +18,11 @@
       </td>
       <td>{{module.id}}</td>
       <td>{{module.name}}</td>
-      <td>{{module.module_id}}</td>
-      <td>{{module.created_by}}</td>
-      <td>{{module.created_on | date }}</td>
-      <td>{{module.modified_by}}</td>
-      <td>{{module.modified_on | date }}</td>
+      <td>{{module.moduleId}}</td>
+      <td>{{module.createdBy}}</td>
+      <td>{{module.createdOn | date }}</td>
+      <td>{{module.modifiedBy}}</td>
+      <td>{{module.modifiedOn | date }}</td>
     </tr>
   </tbody>
 </table>
