emitting works correctly, waiting for refacotring

--- a/src/app/baseline/baseline.component.html
+++ b/src/app/baseline/baseline.component.html
@@ -2,6 +2,10 @@
   baseline works!
 </p>
 
+<button (click)="sajt()" class="btn btn-warning">
+    Get Baseline by module_name_1
+</button>
+
 <button (click)="clearBaselineTable()" class="btn btn-warning">
     Delete Baselines
 </button>
