--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,9 @@
 <app-menu></app-menu>
 
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+  <h1>Welcome to {{ title }}!</h1>
 
-  <app-module></app-module>
-  <app-baseline></app-baseline>
-</div>  
+  <app-main-canvas></app-main-canvas>
+</div>
 
 <app-footer></app-footer>
