--- a/src/app/baseline/baseline.component.html
+++ b/src/app/baseline/baseline.component.html
@@ -3,14 +3,14 @@
 </p>
 
 <button (click)="sajt()" class="btn btn-warning">
-    Get Baseline by module_name_1
+  Get Baseline by module_name_1
 </button>
 
 <button (click)="clearBaselineTable()" class="btn btn-warning">
-    Delete Baselines
+  Delete Baselines
 </button>
 
-<table>
+<table class="table table-striped table-responsive text-nowrap">
   <caption>
     Baselines:
   </caption>
