--- a/src/app/module/module.component.html
+++ b/src/app/module/module.component.html
@@ -4,7 +4,7 @@
 
 <p>Selected Module Id: {{ selectedModuleId }}</p>
 
-<table>
+<table class="table table-striped table-responsive text-nowrap">
   <caption>
     Modules:
   </caption>
