--- a/src/app/main-canvas/main-canvas.component.html
+++ b/src/app/main-canvas/main-canvas.component.html
@@ -1,5 +1,8 @@
 <p>
   main-canvas works! Father: idOfChoosenModule: {{ idOfChoosenModule }}
   <app-module (moduleIdtoEmit)="handleModuleId($event)"></app-module>
-  <app-baseline [baselines]="baselines"></app-baseline>
+  <app-baseline
+    [baselines]="baselines"
+    (isBaselineVisibletoEmit)="handleBaselineAnswer($event)"
+  ></app-baseline>
 </p>
